@@ -6,6 +6,7 @@ Pint Changelog
 
 - Upgrade min version of uncertainties to 3.1.4
 - Fix setting options of the application registry (Issue #1403).
+- Fix Quantity & Unit `is_compatible_with` with registry active contexts (Issue #1424).
 
 
 0.18 (2021-10-26)
